# LearningGoals

./: .env.example  .gitignore  EVALUATION.md  README.md  pyproject.toml
docs/: BUILD_NOTES.md
eval/: checks.py  judge.py  run_eval.py  selftest.py  stability.py
experiments/: benchmark_results.json  benchmark_youtube_fetch.py  smoke_pipeline_offline.py  smoke_youtube_layer.py  test_anthropic_keys.py  test_youtube.py
outputs/weekend_react_dev/: candidates.json  curriculum.json  curriculum.md  run_meta.json
plans/: 01-mvp-plan.md  02-enhancements-plan.md
src/curriculum_agent/: cli.py  config.py  curator.py  guard.py  llm.py  pipeline.py  planner.py  prompts.py  render.py  schemas.py  server.py  triage.py  youtube.py
src/curriculum_agent/static/: index.html
test_set/: explosives_blocked.expected.json  explosives_blocked.json  french_cooking_novice.expected.json  french_cooking_novice.json  hindi_language_learner.expected.json  hindi_language_learner.json  senior_dev_knows_it_all.expected.json  senior_dev_knows_it_all.json  sixty_minute_crunch.expected.json  sixty_minute_crunch.json  travel_blogger_expert_track.expected.json  travel_blogger_expert_track.json  weekend_react_dev.expected.json  weekend_react_dev.json
