[project]
name = "curriculum-agent"
version = "0.1.0"
description = "Learning Curriculum Builder — turns a learner persona into a YouTube curriculum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "yt-dlp>=2026.7.4",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.scripts]
curriculum = "curriculum_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curriculum_agent"]
